[tool.poetry]
name = "climbr"
version = "3.1.0"
description = "A utility that allows users to visualize and highlight their climbing strengths, weaknesses, and trends."
authors = ["Peter Lam <peter.quach.lam@gmail.com>"]
license = "MIT"


[tool.poetry.scripts]
cli = "climbr:main"
bookings = "web_scraper.bookings:main"

[tool.poetry.dependencies]
python = "^3.8.6"
requests = "^2.26.0"
PyYAML = "^6.0"
firebase-admin = "^5.0.3"
python-dotenv = "^0.19.1"
elasticsearch = "^7.15.1"
pytz = "^2021.3"
timezonefinder = "^5.2.0"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
nox = "^2021.10.1"
flake8 = "^4.0.1"
pandas = "^1.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
